# moby-standards

./: Cargo.toml  README.md
data/aliases/: categories.yaml  package-sizes.yaml  potency-fields.yaml  product-types.yaml  weights.yaml
data/standards/: categories.yaml  package-sizes.yaml  potency-fields.yaml  potency-units.yaml  product-types.yaml  units.yaml  weights.yaml
data/states/NV/: package-sizes.yaml
docs/: output-contracts.md  progress-log.md  roadmap.md  standard-keys.md
src/: exports.rs  main.rs  models.rs  normalize.rs  registry.rs
tests/: cli.rs
