[package]
name = "moby-standards"
version = "0.7.0"
edition = "2021"
description = "Canonical cannabis data standards for MOBY: weights, units, categories, product types, aliases, and normalizers."
license = "MIT"
repository = "https://github.com/YOUR_GITHUB_USERNAME/moby-standards"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
